--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>Ligue-nos</h3>
+                  <p>+55 83 98761-7062</p>
                 </div>
               </div><!-- End Info Item -->
 
