Atualizando a main com as branchs

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Sobre</h2>
+        <p>Atualmente, estou me aprofundando no curso de Análise e Desenvolvimento de Sistemas, onde estou desenvolvendo habilidades essenciais para a criação de soluções tecnológicas inovadoras. Com uma forte paixão por codificação e uma determinação para me tornar uma desenvolvedora Full-Stack, estou comprometida em aprender e aplicar tanto o front-end quanto o back-end em projetos desafiadores.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -109,10 +109,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Data de nascimento:</strong> <span>6 Junho 2002</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 83 987617062</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Guarabira, Paraíba, BR</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
