--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Endereço</h3>
-                  <p>Rua da Esperança, 75, Guarabira, Paraíba, BR</p>
+                  <p>Guarabira, Paraíba, BR</p>
                 </div>
               </div><!-- End Info Item -->
 
